--- a/04-monitoring/docker-compose.yaml
+++ b/04-monitoring/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       POSTGRES_PASSWORD: "admin"
       POSTGRES_HOST: "metrics-db"
       POSTGRES_PORT: 5432
-      OPENAI_API_KEY: ${}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
     ports:
     - 8501:8501
     volumes:
